feat: migrate to Java 21, upgrade all dependencies, convert DTOs to records
- Compiler: Java 17 → 21 (maven.compiler.source/target + maven-compiler-plugin 3.13.0)
- Spring Boot: 3.1.5 → 3.4.4
- Telegram Bot API: 6.8.0 → 6.9.7.1
- Jackson: 2.15.2 → 2.17.2
- Apache POI: 5.2.4 → 5.3.0
- Maven Surefire: 3.0.0-M9 → 3.5.2
- Removed explicit junit-jupiter (provided by spring-boot-starter-test)
- Disabled spring-boot-configuration-processor (NPE bug in 3.4.x with empty prefix)

Java 21 features applied:
- Agency and Campaign converted from POJOs to records (immutable, no boilerplate)
- Switch expression in handleUserResponse() instead of switch-statement with breaks
- Switch expression for delivery option translation (file/text → Russian display names)
- Stream + IntStream for building numbered campaign/agency lists instead of StringBuilder+for
- String.isBlank() in hasTemplate()/hasInstruction() instead of trim().isEmpty()

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>